# Unified-Auth-Controller

./: .env  .env.example  .gitignore  .sourcery.yaml  Cargo.toml  Dockerfile  FINAL_PRODUCTION_STATUS.md  FIXES_APPLIED.md  Makefile  PRODUCTION_READY.md  PRODUCTION_STARTUP.md  PRODUCTION_SUMMARY.md  PROJECT_STATUS.md  README.md  build_err.txt  build_errors.txt  clippy_report_7.txt  docker-compose.yml  err.txt  errors.txt  references.txt  start-production.bat
.github/workflows/: ci.yml  security.yml
.kiro/specs/rust-auth-platform/: design.md  requirements.md  tasks.md
config/: default.toml  development.toml  production.toml  test.toml
crates/auth-api/: Cargo.toml  askama.toml
crates/auth-api/src/: error.rs  lib.rs  router.rs  routes.rs  server.rs  validation.rs
crates/auth-api/src/admin/: handlers.rs  mod.rs  routes.rs
crates/auth-api/src/admin/templates/: base.html  dashboard_layout.html
crates/auth-api/src/admin/templates/auth/: login.html  register.html
crates/auth-api/src/admin/templates/dashboard/: index.html
crates/auth-api/src/error/: problem_details.rs
crates/auth-api/src/handlers/: auth.rs  auth_flow.rs  auth_oidc.rs  auth_saml.rs  certs.rs  discovery.rs  health.rs  lazy_reg.rs  login_otp.rs  mod.rs  oidc_provider.rs  otp.rs  profile.rs  register.rs  users.rs  verification.rs
crates/auth-api/src/handlers/authorization/: roles.rs
crates/auth-api/src/handlers/workflow/: lazy_upgrade.rs  magic_link.rs  mod.rs  universal.rs
crates/auth-api/src/handlers/workflow/webauthn/: steps.rs
crates/auth-api/src/middleware/: audit.rs  auth.rs  mod.rs  rate_limit.rs  request_id.rs  security_headers.rs
crates/auth-audit/: Cargo.toml
crates/auth-audit/src/: compliance.rs  events.rs  lib.rs  logger.rs  service.rs  storage.rs
crates/auth-cache/: Cargo.toml
crates/auth-cache/src/: lib.rs
crates/auth-config/: Cargo.toml
crates/auth-config/proptest-regressions/: manager.txt
crates/auth-config/src/: config.rs  lib.rs  loader.rs  manager.rs  validation.rs
crates/auth-core/: Cargo.toml
crates/auth-core/src/: audit.rs  error.rs  lib.rs  models.rs
crates/auth-core/src/models/: mod_validation.rs  organization.rs  password_policy.rs  permission.rs  role.rs  session.rs  subscription.rs  tenant.rs  token.rs  user.rs  user_tenant.rs  validation.rs
crates/auth-core/src/prelude/: mod.rs
crates/auth-core/src/resilience/: retry.rs
crates/auth-core/src/services/: authorization.rs  credential.rs  identity.rs  lazy_registration.rs  mod.rs  otp_delivery.rs  otp_service.rs  rate_limiter.rs  risk_assessment.rs  role_service.rs  session_service.rs  subscription_service.rs  tenant_service.rs  token_service.rs  webauthn_service.rs
crates/auth-core/src/services/authorization/: mod.rs  policy.rs  service.rs
crates/auth-core/src/services/background/: audit_worker.rs  mod.rs
crates/auth-core/src/services/workflow/: engine.rs  mod.rs  rules.rs
crates/auth-core/tests/: refresh_token_tests.rs  token_property_tests.proptest-regressions  token_property_tests.rs
crates/auth-crypto/: Cargo.toml
crates/auth-crypto/src/: encryption.rs  hashing.rs  jwt.rs  keys.rs  kms.rs  lib.rs
crates/auth-crypto/test_keys/: private_key.pem  public_key.pem
crates/auth-crypto/tests/: signing_test.rs
crates/auth-db/: Cargo.toml
crates/auth-db/src/: connection.rs  lib.rs  migrations.rs  models.rs  sharding.rs
crates/auth-db/src/repositories/: mod.rs  otp_repository.rs  refresh_token_repository.rs  revoked_token_repository.rs  role_repository.rs  session_repository.rs  subscription_repository.rs  tenant_repository.rs  user_multi_channel.rs  user_repository.rs  webauthn_repository.rs
crates/auth-db/src/repositories/authorization/: mod.rs  permission_repository.rs  role_repository.rs
crates/auth-extension/: Cargo.toml
crates/auth-extension/src/: graphql.rs  lib.rs  plugin.rs  webhook.rs
crates/auth-platform/: Cargo.toml
crates/auth-platform/src/: lib.rs  port_authority.rs  port_lease.rs  port_policy.rs  safe_socket.rs  shutdown.rs
crates/auth-protocols/: Cargo.toml
crates/auth-protocols/src/: discovery.rs  lib.rs  oauth.rs  oidc.rs  saml.rs  scim.rs
crates/auth-telemetry/: Cargo.toml
crates/auth-telemetry/src/: anomalies.rs  config.rs  lib.rs
crates/auth-telemetry/src/anomalies/: detector.rs
docs/: API_REFERENCE.md  ARCHITECTURAL_OVERVIEW.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  ENGINEERING_GUIDE.md  Prod_OTP_PROVIDER_CONFIG.md  README.md  README.mdx  USER_GUIDE.md
docs/01_product/: completion_towards_goal.md  product_requirements.md  product_vision.md
docs/02_architecture/: master_architecture.md
docs/03_engineering/: engineering_constitution.md
docs/04_security/: incident_response.md  security_architecture.md  threat_model.md
docs/05_multitenancy/: enterprise_customization.md  multitenant_model.md
docs/06_api_contracts/: api_specification.md  auth_flows.md
docs/07_operations/: deployment_strategy.md  production_readiness.md
docs/08_governance/: adr_template.md  versioning_policy.md
docs/code/: PROGRESS.md  configuration.md  crates.md  dependencies.md  flows.md  main.md  security.md  structure.md  test_binaries.md
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
migrations/: 001_initial_schema.sql  002_create_refresh_tokens_table.sql  003_create_revoked_tokens_table.sql  004_create_sessions_table.sql  005_create_subscriptions_table.sql  006_create_audit_logs.sql  007_create_passkeys.sql  20260115_01_multi_channel_auth.sql  20260115_02_otp_infrastructure.sql  20260115_03_lazy_registration.sql  20260115_04_rbac_abac_system.sql  20260115_05_enterprise_isolation.sql  complete_migration.sql.bak
postman/: postman_collection.json
scripts/: build.sh  dev.sh  run-migrations.ps1  test.sh  test_mysql.py
sdk/typescript/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
src/: main.rs
test-mysql/: Cargo.toml
test-mysql/src/: main.rs
tests/: api_mock_tests.rs  audit_performance.rs  enterprise_compliance.rs  integration_tests.rs  mysql_only_tests.rs
upflame_ago/agent/: executor.py
(+107 files in other folders)
