[workspace]
members = [
    "crates/auth-core",
    "crates/auth-api",
    "crates/auth-protocols",
    "crates/auth-db",
    "crates/auth-config",
    "crates/auth-crypto",
    "crates/auth-cache",
    "crates/auth-telemetry",
    "crates/auth-audit",
    "crates/auth-extension"
]
resolver = "2"

[package]
name = "auth-platform"
version = "0.1.0"
edition = "2021"
description = "Enterprise SSO and Identity Platform"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
proptest = "1.4"

# Internal dependencies
auth-config = { path = "crates/auth-config" }
auth-core = { path = "crates/auth-core" }
auth-api = { path = "crates/auth-api" }
auth-db = { path = "crates/auth-db" }
auth-audit = { path = "crates/auth-audit" }
auth-protocols = { path = "crates/auth-protocols" }
auth-extension = { path = "crates/auth-extension" }
auth-cache = { path = "crates/auth-cache" }
auth-telemetry = { path = "crates/auth-telemetry" }
async-graphql = { workspace = true }
metrics = "0.21"

dotenvy.workspace = true

[[bin]]
name = "test_mysql"
path = "src/bin/test_mysql.rs"

[[bin]]
name = "test_rbac"
path = "src/bin/test_rbac.rs"

[[bin]]
name = "test_risk_session"
path = "src/bin/test_risk_session.rs"

[[bin]]
name = "test_subscription"
path = "src/bin/test_subscription.rs"

[[bin]]
name = "test_audit"
path = "src/bin/test_audit.rs"

[[bin]]
name = "test_oauth"
path = "src/bin/test_oauth.rs"

[[bin]]
name = "test_audit_export"
path = "src/bin/test_audit_export.rs"

[[bin]]
name = "test_protocol_property"
path = "src/bin/test_protocol_property.rs"

[[bin]]
name = "test_extension"
path = "src/bin/test_extension.rs"

[[bin]]
name = "test_crypto_property"
path = "src/bin/test_crypto_property.rs"

[[bin]]
name = "test_passwordless"
path = "src/bin/test_passwordless.rs"

[[bin]]
name = "test_auth_flow"
path = "src/bin/test_auth_flow.rs"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# HTTP server and client
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "sqlite", "json", "chrono", "uuid"] }
sea-query = "0.30"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
argon2 = "0.5"
jsonwebtoken = "9.2"
ring = "0.17"
rustls = "0.22"
rustls-webpki = "0.102"

# UUID and time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Caching
dashmap = "5.5"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Testing
proptest = "1.4"
mockall = "0.12"

# Security
secrecy = { version = "0.8", features = ["serde"] }
constant_time_eq = "0.3"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Metrics and observability
prometheus = "0.13"
opentelemetry = "0.21"
opentelemetry-prometheus = "0.14"

# Protocol support
samael = "0.0.19"
openidconnect = "3.4"

# Extension support
async-graphql = { version = "7.0", features = ["uuid", "chrono"] }
async-graphql-axum = "7.0"
rhai = "1.16"

# Security
webauthn-rs = "0.5"
base64 = "0.22"
url = "2.5"
rand = "0.8"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
futures = "0.3"
pin-project = "1.1"
async-trait = "0.1"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 1
debug = true
