[package]
name = "auth-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { workspace = true }
base64 = { workspace = true }
rsa = "0.9"
sha2 = { version = "0.10", features = ["oid"] }
signature = "2.0"
rand = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }