[package]
name = "auth-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { workspace = true }
base64 = { workspace = true }
rsa = "0.9"
sha2 = { version = "0.10", features = ["oid"] }
signature = "2.0"
rand = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

# Additional dependencies for JWT
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync"] }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand_core = "0.6"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }