[package]
name = "auth-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { version = "0.21", features = ["metrics"] }
tracing-opentelemetry = "0.22"
opentelemetry_sdk = "0.21"
sysinfo = "0.30"
